--- a/specification/agricultureplatform/AgriculturePlatform.DataPlane/tspconfig.yaml
+++ b/specification/agricultureplatform/AgriculturePlatform.DataPlane/tspconfig.yaml
@@ -14,13 +14,13 @@ options:
     examples-dir: "{project-root}/examples"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/agricultureplatform.json"
   "@azure-tools/typespec-python":
-    package-dir: "microsoft-agricultureplatform"
+    package-dir: "azure-agricultureplatform"
     package-name: "{package-dir}"
     generate-test: true
     generate-sample: true
     flavor: azure
   "@azure-tools/typespec-csharp":
-    package-dir: "Microsoft.AgriculturePlatform"
+    package-dir: "Azure.AgriculturePlatform"
     clear-output-folder: true
     model-namespace: false
     namespace: "{package-dir}"
@@ -32,7 +32,7 @@ options:
       name: "@azure-rest/agricultureplatform"
     flavor: azure
   "@azure-tools/typespec-java":
-    package-dir: "microsoft-agricultureplatform"
+    package-dir: "azure-agricultureplatform"
     namespace: com.microsoft.agricultureplatform
     service-name: "agricultureplatform"
     flavor: azure
