locked spec-gen-sdk version

--- a/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
+++ b/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
@@ -42,7 +42,7 @@ extends:
           - name: PythonVersion
             value: '3.13'
           - name: SpecGenSdkVersion
-            value: 'latest'
+            value: '0.2.2'
           - name: PipelineArtifactsName
             value: 'packages'
 
