make ConnectionType union.

--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
@@ -433,7 +433,7 @@
             ],
             "x-ms-enum": {
               "name": "ConnectionType",
-              "modelAsString": false,
+              "modelAsString": true,
               "values": [
                 {
                   "name": "AzureOpenAI",
@@ -9045,7 +9045,7 @@
       ],
       "x-ms-enum": {
         "name": "ConnectionType",
-        "modelAsString": false,
+        "modelAsString": true,
         "values": [
           {
             "name": "AzureOpenAI",
