--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-01-preview/azure-ai-projects-1dp.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-01-preview/azure-ai-projects-1dp.json
@@ -455,18 +455,6 @@
           },
           {
             "$ref": "#/parameters/Azure.Core.ClientRequestIdHeader"
-          },
-          {
-            "$ref": "#/parameters/Azure.Core.ConditionalRequestHeaders.ifMatch"
-          },
-          {
-            "$ref": "#/parameters/Azure.Core.ConditionalRequestHeaders.ifNoneMatch"
-          },
-          {
-            "$ref": "#/parameters/Azure.Core.ConditionalRequestHeaders.ifUnmodifiedSince"
-          },
-          {
-            "$ref": "#/parameters/Azure.Core.ConditionalRequestHeaders.ifModifiedSince"
           }
         ],
         "responses": {
@@ -476,10 +464,6 @@
               "$ref": "#/definitions/Connection"
             },
             "headers": {
-              "ETag": {
-                "type": "string",
-                "description": "The entity tag for the response."
-              },
               "x-ms-client-request-id": {
                 "type": "string",
                 "format": "uuid",
@@ -862,7 +846,7 @@
         }
       }
     },
-    "/deployments/{deploymentName}": {
+    "/deployments/{name}": {
       "get": {
         "operationId": "Deployments_Get",
         "description": "Get a deployed model.",
@@ -871,26 +855,14 @@
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
           },
           {
-            "name": "deploymentName",
+            "name": "name",
             "in": "path",
-            "description": "Name of the deployment for the model",
+            "description": "Name of the deployment",
             "required": true,
             "type": "string"
           },
           {
             "$ref": "#/parameters/Azure.Core.ClientRequestIdHeader"
-          },
-          {
-            "$ref": "#/parameters/Azure.Core.ConditionalRequestHeaders.ifMatch"
-          },
-          {
-            "$ref": "#/parameters/Azure.Core.ConditionalRequestHeaders.ifNoneMatch"
-          },
-          {
-            "$ref": "#/parameters/Azure.Core.ConditionalRequestHeaders.ifUnmodifiedSince"
-          },
-          {
-            "$ref": "#/parameters/Azure.Core.ConditionalRequestHeaders.ifModifiedSince"
           }
         ],
         "responses": {
@@ -900,10 +872,6 @@
               "$ref": "#/definitions/Deployment"
             },
             "headers": {
-              "ETag": {
-                "type": "string",
-                "description": "The entity tag for the response."
-              },
               "x-ms-client-request-id": {
                 "type": "string",
                 "format": "uuid",
@@ -9343,11 +9311,6 @@
       "type": "object",
       "description": "Response from the listSecrets operation",
       "properties": {
-        "id": {
-          "type": "string",
-          "description": "Fully qualified resource identifier",
-          "readOnly": true
-        },
         "name": {
           "type": "string",
           "description": "The name of the resource",
@@ -9372,7 +9335,6 @@
         }
       },
       "required": [
-        "id",
         "name",
         "type",
         "target",
@@ -9600,37 +9562,32 @@
       "type": "object",
       "description": "Model Deployment Definition",
       "properties": {
-        "deploymentName": {
+        "name": {
           "type": "string",
-          "description": "Name of the deployment for the model",
+          "description": "Name of the deployment",
           "readOnly": true
         },
         "modelName": {
           "type": "string",
-          "description": "Publisher-specific name of the model",
+          "description": "Publisher-specific name of the deployed model",
           "readOnly": true
         },
         "modelVersion": {
           "type": "string",
-          "description": "Publisher-specific version of the model",
+          "description": "Publisher-specific version of the deployed model",
           "readOnly": true
         },
-        "publisher": {
+        "modelPublisher": {
           "type": "string",
-          "description": "Name of the model publisher",
+          "description": "Name of the deployed model's publisher",
           "readOnly": true
         },
         "capabilities": {
           "type": "object",
-          "description": "Capabilities of model",
+          "description": "Capabilities of deployed model",
           "additionalProperties": {
             "type": "string"
           },
-          "readOnly": true
-        },
-        "raiPolicyName": {
-          "type": "string",
-          "description": "RAI policy enabled for model",
           "readOnly": true
         },
         "sku": {
@@ -9640,24 +9597,17 @@
         },
         "connectionName": {
           "type": "string",
-          "description": "Name of the connection the model comes from",
-          "readOnly": true
-        },
-        "systemData": {
-          "$ref": "#/definitions/SystemData",
-          "description": "System data of the resource",
+          "description": "Name of the connection the deployment comes from",
           "readOnly": true
         }
       },
       "required": [
-        "deploymentName",
+        "name",
         "modelName",
         "modelVersion",
-        "publisher",
+        "modelPublisher",
         "capabilities",
-        "raiPolicyName",
-        "sku",
-        "systemData"
+        "sku"
       ]
     },
     "EmbeddingConfiguration": {
@@ -10059,7 +10009,8 @@
           "description": "The Connection items on this page",
           "items": {
             "$ref": "#/definitions/Connection"
-          }
+          },
+          "x-ms-identifiers": []
         },
         "nextLink": {
           "type": "string",
@@ -10390,44 +10341,6 @@
       "format": "uuid",
       "x-ms-parameter-location": "method",
       "x-ms-client-name": "clientRequestId"
-    },
-    "Azure.Core.ConditionalRequestHeaders.ifMatch": {
-      "name": "If-Match",
-      "in": "header",
-      "description": "The request should only proceed if an entity matches this string.",
-      "required": false,
-      "type": "string",
-      "x-ms-parameter-location": "method",
-      "x-ms-client-name": "ifMatch"
-    },
-    "Azure.Core.ConditionalRequestHeaders.ifModifiedSince": {
-      "name": "If-Modified-Since",
-      "in": "header",
-      "description": "The request should only proceed if the entity was modified after this time.",
-      "required": false,
-      "type": "string",
-      "format": "date-time",
-      "x-ms-parameter-location": "method",
-      "x-ms-client-name": "ifModifiedSince"
-    },
-    "Azure.Core.ConditionalRequestHeaders.ifNoneMatch": {
-      "name": "If-None-Match",
-      "in": "header",
-      "description": "The request should only proceed if no entity matches this string.",
-      "required": false,
-      "type": "string",
-      "x-ms-parameter-location": "method",
-      "x-ms-client-name": "ifNoneMatch"
-    },
-    "Azure.Core.ConditionalRequestHeaders.ifUnmodifiedSince": {
-      "name": "If-Unmodified-Since",
-      "in": "header",
-      "description": "The request should only proceed if the entity was not modified after this time.",
-      "required": false,
-      "type": "string",
-      "format": "date-time",
-      "x-ms-parameter-location": "method",
-      "x-ms-client-name": "ifUnmodifiedSince"
     },
     "Azure.Core.Foundations.ApiVersionParameter": {
       "name": "api-version",
