update swagger file

--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-01-preview/azure-ai-projects-1dp.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-01-preview/azure-ai-projects-1dp.json
@@ -9249,9 +9249,9 @@
       "type": "object",
       "description": "Azure AI Search Index Definition",
       "properties": {
-        "connectionId": {
+        "connectionName": {
           "type": "string",
-          "description": "Connection id to Azure AI Search"
+          "description": "Name of connection to Azure AI Search"
         },
         "indexName": {
           "type": "string",
@@ -9259,7 +9259,7 @@
         }
       },
       "required": [
-        "connectionId",
+        "connectionName",
         "indexName"
       ],
       "allOf": [
@@ -9399,9 +9399,9 @@
       "type": "object",
       "description": "CosmosDB Vector Store Index Definition",
       "properties": {
-        "connectionId": {
+        "connectionName": {
           "type": "string",
-          "description": "Connection id to CosmosDB"
+          "description": "Name of connection to CosmosDB"
         },
         "databaseName": {
           "type": "string",
@@ -9417,7 +9417,7 @@
         }
       },
       "required": [
-        "connectionId",
+        "connectionName",
         "databaseName",
         "containerName",
         "embeddingConfiguration"
@@ -9614,13 +9614,9 @@
       "type": "object",
       "description": "Embedding configuration class",
       "properties": {
-        "connectionId": {
+        "modelDeploymentName": {
           "type": "string",
-          "description": "Connection id to embedding model"
-        },
-        "deploymentName": {
-          "type": "string",
-          "description": "Deployment name of embedding model"
+          "description": "Deployment name of embedding model. It can point to a model deployment either in the parent AIServices or a connection."
         },
         "embeddingField": {
           "type": "string",
@@ -9628,7 +9624,7 @@
         }
       },
       "required": [
-        "deploymentName",
+        "modelDeploymentName",
         "embeddingField"
       ]
     },
