Change indexType -> index

--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-01-preview/azure-ai-projects-1dp.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-01-preview/azure-ai-projects-1dp.json
@@ -9767,7 +9767,7 @@
       "type": "object",
       "description": "Index resource Definition",
       "properties": {
-        "indexType": {
+        "type": {
           "$ref": "#/definitions/IndexType",
           "description": "Type of index"
         },
@@ -9812,9 +9812,9 @@
           "readOnly": true
         }
       },
-      "discriminator": "indexType",
+      "discriminator": "type",
       "required": [
-        "indexType"
+        "type"
       ]
     },
     "IndexType": {
