Add provider github to new API version

--- a/specification/kubernetesconfiguration/resource-manager/Microsoft.KubernetesConfiguration/fluxConfigurations/stable/2025-04-01/fluxconfiguration.json
+++ b/specification/kubernetesconfiguration/resource-manager/Microsoft.KubernetesConfiguration/fluxConfigurations/stable/2025-04-01/fluxconfiguration.json
@@ -489,6 +489,7 @@
           "x-nullable": true,
           "enum": [
             "Azure",
+            "Github",
             "Generic"
           ],
           "x-ms-enum": {
@@ -499,6 +500,11 @@
                 "name": "Azure",
                 "value": "Azure",
                 "description": "Azure provider can be used to authenticate to Azure DevOps repositories using Managed Identity."
+              },
+              {
+                "name": "Github",
+                "value": "Github",
+                "description": "Github provider can be used to authenticate "
               },
               {
                 "name": "Generic",
@@ -562,6 +568,7 @@
           "x-nullable": true,
           "enum": [
             "Azure",
+            "Github",
             "Generic"
           ],
           "x-ms-enum": {
@@ -572,6 +579,11 @@
                 "name": "Azure",
                 "value": "Azure",
                 "description": "Azure provider can be used to authenticate to Azure DevOps repositories using Managed Identity."
+              },
+              {
+                "name": "Github",
+                "value": "Github",
+                "description": "Github provider can be used to authenticate "
               },
               {
                 "name": "Generic",
