[.github] Add Windows to test matrix - Most actions only use Linux at runtime, but dev on Windows needs to be supported

--- a/.github/workflows/github-test.yaml
+++ b/.github/workflows/github-test.yaml
@@ -21,7 +21,11 @@ defaults:
 
 jobs:
   test:
-    runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        os: [ubuntu, windows]
+
+    runs-on: ${{ fromJSON('{"ubuntu":"ubuntu-24.04", "windows":"windows-2022"}')[matrix.os] }}
 
     steps:
       - name: Checkout
