--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-01-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-01-01/netapp.json
@@ -258,7 +258,7 @@
           }
         },
         "x-ms-pageable": {
-          "nextLinkName": null
+          "nextLinkName": "nextLink"
         },
         "x-ms-examples": {
           "Usages_List": {
