--- a/.github/workflows/github-test.yaml
+++ b/.github/workflows/github-test.yaml
@@ -46,6 +46,6 @@ jobs:
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
         with:
-          name: code-coverage-report
+          name: code-coverage-report-${{ matrix.os }}
           path: ./.github/coverage
           if-no-files-found: ignore
