--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-01-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-01-01/netapp.json
@@ -6079,6 +6079,7 @@
         },
         "name": {
           "description": "The name of the usage.",
+          "readOnly": true,
           "$ref": "#/definitions/usageName"
         },
         "properties": {
