--- a/.github/package.json
+++ b/.github/package.json
@@ -8,11 +8,13 @@
     "yaml": "^2.7.0"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.0.0",
     "@types/github-script": "github:actions/github-script",
     "@octokit/webhooks-types": "^7.5.1",
     "@vitest/coverage-v8": "^3.0.7",
     "prettier": "~3.5.3",
+    "typescript": "~5.8.2",
     "vitest": "^3.0.7"
   },
   "scripts": {
