--- a/.github/package.json
+++ b/.github/package.json
@@ -18,6 +18,8 @@
     "vitest": "^3.0.7"
   },
   "scripts": {
+    "lint": "npm run lint:tsc",
+    "lint:tsc": "npx tsc && echo 'Type checking completed successfully!'",
     "test": "vitest",
     "test:ci": "vitest run --coverage --reporter=verbose"
   }
