--- a/.github/tsconfig.json
+++ b/.github/tsconfig.json
@@ -4,6 +4,8 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
+    // Avoid generating tsconfig.tsbuildinfo file, which isn't useful for our scenario
+    "incremental": false,
     "noEmit": true,
   },
   "include": [
