--- a/.github/package.json
+++ b/.github/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "lint": "npm run lint:tsc",
-    "lint:tsc": "npx tsc && echo 'Type checking completed successfully!'",
+    "lint:tsc": "npx tsc && echo 'Type checking completed successfully'",
     "test": "vitest",
     "test:ci": "vitest run --coverage --reporter=verbose"
   }
